<?xml version="1.0"?>
<package format="2">

  <name>libcamera_ros</name>
  <version>0.1.0</version>
  <description>Package for libcamera supported cameras (V4L2, Raspberry Pi Camera Modules) for ROS</description>

  <author email="Rauch.Christian@gmx.de">Christian Rauch</author>
  <maintainer email="vojtech.spurny@fel.cvut.cz">Vojtech Spurny</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>camera_info_manager</depend>
  <depend>cmake_modules</depend>
  <depend>image_transport</depend>
  <depend>libcamera</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml" />
  </export>

</package>
